--- a/workspace/files/ui/templates/files/ui/partials/dialogs.html
+++ b/workspace/files/ui/templates/files/ui/partials/dialogs.html
@@ -103,20 +103,19 @@
         </div>
         <div class="collapse-content">
           <div class="prose prose-sm max-w-none pt-2">
-            <h4 class="font-semibold mt-0 mb-2">Context Menu (right-click)</h4>
+            <h4 class="font-semibold mt-0 mb-2">Selection shortcuts</h4>
+            <p class="text-xs opacity-70 mt-0 mb-2">Select one or more items using checkboxes, then press a shortcut.</p>
             <table class="table table-sm">
               <tbody>
-                <tr><td><kbd class="kbd kbd-sm">Enter</kbd></td><td>Open / View</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">F2</kbd></td><td>Rename</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Del</kbd></td><td>Delete</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">F</kbd></td><td>Toggle favorite</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">P</kbd></td><td>Pin / unpin from sidebar</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">S</kbd></td><td>Download</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">L</kbd></td><td>Copy link</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">X</kbd></td><td>Cut</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">C</kbd></td><td>Copy</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">V</kbd></td><td>Paste</td></tr>
-                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">I</kbd></td><td>Properties</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Enter</kbd></td><td>Open folder / View file</td><td class="text-xs opacity-60">single</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">F2</kbd></td><td>Rename</td><td class="text-xs opacity-60">single</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Del</kbd></td><td>Delete</td><td class="text-xs opacity-60">single / multi</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">F</kbd></td><td>Toggle favorite</td><td class="text-xs opacity-60">single / multi</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">P</kbd></td><td>Pin / unpin from sidebar</td><td class="text-xs opacity-60">single folder</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">X</kbd></td><td>Cut</td><td class="text-xs opacity-60">single / multi</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">C</kbd></td><td>Copy</td><td class="text-xs opacity-60">single / multi</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">V</kbd></td><td>Paste</td><td class="text-xs opacity-60">no selection needed</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Ctrl</kbd> + <kbd class="kbd kbd-sm">I</kbd></td><td>Properties</td><td class="text-xs opacity-60">single</td></tr>
               </tbody>
             </table>
             <h4 class="font-semibold mt-3 mb-2">File Editor</h4>
