--- a/workspace/files/ui/templates/files/ui/partials/context_menu.html
+++ b/workspace/files/ui/templates/files/ui/partials/context_menu.html
@@ -80,7 +80,7 @@
           >
             <i data-lucide="eye" class="w-4 h-4"></i>
             <span>View in browser</span>
-            <kbd class="kbd kbd-xs ml-auto">Enter</kbd>
+            <kbd class="kbd kbd-xs ml-auto">Enter/Space</kbd>
           </button>
         </li>
       </template>
@@ -95,7 +95,7 @@
           >
             <i data-lucide="folder-open" class="w-4 h-4"></i>
             <span>Open</span>
-            <kbd class="kbd kbd-xs ml-auto">Enter</kbd>
+            <kbd class="kbd kbd-xs ml-auto">Enter/Space</kbd>
           </button>
         </li>
       </template>
