--- a/workspace/files/ui/templates/files/ui/partials/dialogs.html
+++ b/workspace/files/ui/templates/files/ui/partials/dialogs.html
@@ -107,7 +107,7 @@
             <p class="text-xs opacity-70 mt-0 mb-2">Select one or more items using checkboxes, then press a shortcut.</p>
             <table class="table table-sm">
               <tbody>
-                <tr><td><kbd class="kbd kbd-sm">Enter</kbd></td><td>Open folder / View file</td><td class="text-xs opacity-60">single</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Enter</kbd> / <kbd class="kbd kbd-sm">Space</kbd></td><td>Open folder / View file</td><td class="text-xs opacity-60">single</td></tr>
                 <tr><td><kbd class="kbd kbd-sm">F2</kbd></td><td>Rename</td><td class="text-xs opacity-60">single</td></tr>
                 <tr><td><kbd class="kbd kbd-sm">Del</kbd></td><td>Delete</td><td class="text-xs opacity-60">single / multi</td></tr>
                 <tr><td><kbd class="kbd kbd-sm">F</kbd></td><td>Toggle favorite</td><td class="text-xs opacity-60">single / multi</td></tr>
