--- a/workspace/files/ui/templates/files/ui/partials/dialogs.html
+++ b/workspace/files/ui/templates/files/ui/partials/dialogs.html
@@ -103,7 +103,15 @@
         </div>
         <div class="collapse-content">
           <div class="prose prose-sm max-w-none pt-2">
-            <h4 class="font-semibold mt-0 mb-2">Selection shortcuts</h4>
+            <h4 class="font-semibold mt-0 mb-2">Navigation</h4>
+            <table class="table table-sm">
+              <tbody>
+                <tr><td><kbd class="kbd kbd-sm">Alt</kbd> + <kbd class="kbd kbd-sm">&larr;</kbd></td><td>Go back</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Alt</kbd> + <kbd class="kbd kbd-sm">&rarr;</kbd></td><td>Go forward</td></tr>
+                <tr><td><kbd class="kbd kbd-sm">Alt</kbd> + <kbd class="kbd kbd-sm">&uarr;</kbd></td><td>Go to parent folder</td></tr>
+              </tbody>
+            </table>
+            <h4 class="font-semibold mt-3 mb-2">Selection shortcuts</h4>
             <p class="text-xs opacity-70 mt-0 mb-2">Select one or more items using checkboxes, then press a shortcut.</p>
             <table class="table table-sm">
               <tbody>
